<resources>
    <string name="app_name">VegNab</string>
    <string name="empty_string"></string>
    <string name="under_construction">Not implemented yet</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="menu_main_title_export_db">Export Database</string>
    <string name="menu_main_title_settings">Settings</string>
    <string name="menu_main_title_about">About</string>
    <string name="menu_main_title_help">Help</string>
    <string name="menu_main_title_donate">Donate</string>
    <string name="menu_main_title_legal">Legal Notices</string>

    <string name="menu_visits_title_edit_proj">Edit Project</string>
    <string name="menu_visits_title_new_proj">New Project</string>
    <string name="menu_visits_title_del_proj">Delete Project</string>
    <string name="menu_visits_title_new_plottype">New Plot Type</string>
    <string name="menu_visits_title_unhide_visits">Un-hide Visits</string>

    <string name="menutitle_app_info">App info</string>
    <string name="menutitle_legal_notices">Legal Notices</string>
    <string name="menutitle_hide_visit">Hide Visit</string>

    <string name="menutitle_visit_info">Visit details</string>
    <string name="menutitle_delete_visit">Delete Visit</string>
    <string name="menutitle_export_visit">Export Visit</string>
    <string name="menutitle_unhide_visit">Un-hide Visit</string>
    <string name="menutitle_delete_namer">Delete Namer</string>
    <string name="menutitle_donate">Donate</string>
    <string name="visits_msg_start_new">Start a new visit</string>
    <string name="vli_export_visit">Export this visit\'s data</string>
    <string name="vli_hide_visit">Hide this visit</string>
    <string name="vae_txt_title">Visit Header Information</string>
    <string name="vae_txt_name">Memorable short name for this Visit, up to 16 characters</string>
    <string name="vae_hint_name">Visit Name</string>
    <string name="vae_txt_notes">Notes</string>
    <string name="vae_hint_notes">Description and/or notes</string>
    <string name="vae_txt_location">Reference locaton. Long-press for options.</string>
    <string name="vae_hint_location">Location</string>

    <string name="vae_hint_visit">Visit</string>
    <string name="vae_button_save">Save</string>
    <string name="vae_not_saved">Visit not saved</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
