<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/visits_action_edit_proj"
        android:icon="@android:drawable/ic_menu_edit"
        android:orderInCategory="100"
        android:title="@string/menu_visits_title_edit_proj"
        app:showAsAction="never" />
    <item
        android:id="@+id/visits_action_new_proj"
        android:icon="@android:drawable/ic_menu_add"
        android:orderInCategory="110"
        android:title="@string/menu_visits_title_new_proj"
        app:showAsAction="never" />
    <item
        android:id="@+id/visits_action_delete_proj"
        android:icon="@android:drawable/ic_menu_delete"
        android:orderInCategory="120"
        android:title="@string/menu_visits_title_del_proj"
        app:showAsAction="never" />
    <item
        android:id="@+id/visits_action_new_plottype"
        android:icon="@android:drawable/ic_menu_add"
        android:orderInCategory="130"
        android:title="@string/menu_visits_title_new_plottype"
        app:showAsAction="never" />
    <item
        android:id="@+id/visits_action_unhide_visits"
        android:icon="@android:drawable/ic_menu_search"
        android:orderInCategory="150"
        android:title="@string/menu_visits_title_unhide_visits"
        app:showAsAction="never" />
    app:showAsAction="never"/>
</menu>